syntax = "proto3";

package cogip.shell;

message PB_Command {
    string cmd = 1;
    string desc = 2;
}
